fixup! corrected spacings

--- a/landing-pages/site/assets/scss/_docs.scss
+++ b/landing-pages/site/assets/scss/_docs.scss
@@ -5978,6 +5978,7 @@
     z-index: 200;
     width: 280px;
     font-size: 14px;
+    line-height: 1.43;
   }
 
   .wy-nav-side-toc .wy-side-scroll {
@@ -5986,24 +5987,56 @@
   }
 
   .wy-nav-side-toc .wy-menu-vertical li ul {
-    display: block;
+    display: block !important;
   }
 
-  .wy-nav-side-toc li {
-    padding-left: 1px; // hack to make the border appear centered in relation to thicker blue border
+  .wy-nav-side-toc .wy-menu-vertical > ul, .wy-nav-side-toc .wy-menu-vertical li.current > ul {
+    padding-left: 1px;
   }
 
   .wy-nav-side-toc li.current {
-    padding-left: 0;
+    margin-left: -1px; // hack to make the border appear centered in relation to thicker blue border
   }
 
-  .wy-nav-side-toc li a {
+  .wy-nav-side-toc .wy-menu-vertical li a {
     border-left: solid 2px #cbcbcb;
     padding-left: calc(1.25em + 1px);
+    padding-right: 0;
+    font-weight: normal;
   }
 
-  .wy-nav-side-toc li.current > a {
+  .wy-nav-side-toc .wy-menu-vertical li.current > a {
     border-left: solid 4px #017cee;
+    color: #017cee;
+    background: transparent;
     padding-left: 1.25em;
+    padding-right: 0;
+  }
+
+  .wy-nav-side-toc .wy-menu-vertical li.toctree-l2 > a {
+    padding-left: 2.427em;
+    padding-right: 0;
+  }
+
+  .wy-nav-side-toc .wy-menu-vertical li.toctree-l2.current li.toctree-l3 > a {
+    padding-right: 0;
+    background: transparent;
+  }
+
+  .wy-nav-side-toc .wy-menu-vertical li.toctree-l3 > a {
+    padding-left: 4.045em;
+    padding-right: 0;
+    font-size: inherit;
+  }
+
+  .wy-nav-side-toc .wy-menu-vertical li.toctree-l3.current li.toctree-l4 > a {
+    padding-right: 0;
+    background: transparent;
+  }
+
+  .wy-nav-side-toc .wy-menu-vertical li.toctree-l4 > a {
+    padding-left: 5.663em;
+    padding-right: 0;
+    font-size: inherit;
   }
 }
